# Retailer-Sales-Prediction-and-Forecasting

./: Makefile  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst  make.bat
models/: sgd_pipeline.joblib
models/forecasting/: lr_pipe.joblib  xgb_pipe.joblib  xgb_pipeline.joblib
models/predicting/: sgd_pipeline.joblib
notebooks/: combine_df.ipynb  data_preparation copy 2.ipynb  data_preparation copy.ipynb  data_preparation.ipynb  forecasting.ipynb  forecasting_v2.ipynb  predicting.ipynb
