[tool.poetry]
name = "amla-at2"
version = "0.1.0"
description = ""
authors = ["Anh Le <vungocanh.le@student.uts.edu.au>"]
readme = "README.md"
packages = [{include = "amla_at2"}]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "3.6.3"
pandas = "2.0.1"
scikit-learn = "1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
